--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <subtitle>Dave Liepmann</subtitle>
     <section>
       <p>Tufte CSS provides tools to style web articles using the ideas demonstrated by Edward Tufte's books and handouts. Tufte’s style is known for its simplicity, extensive use of sidenotes, tight integration of graphics with text, and carefully chosen typography.</p>
-
       <p>The project lives at GitHub as <a href="https://github.com/daveliepmann/tufte-css">tufte-css</a>. The idea is essentially cribbed wholesale from Tufte-<span class="latex">L<sup>a</sup>T<sub>e</sub>X</span><span class="sidenote-number"></span> and <a href="http://rmarkdown.rstudio.com/tufte_handout_format.html">R Markdown's Tufte Handout format</a><span class="sidenote">See the <a href="https://tufte-latex.github.io/tufte-latex/">Tufte-LaTeX project homepage</a></span>. This page is an adaptation of the <a href="http://rmarkdown.rstudio.com/examples/tufte-handout.pdf">Tufte Handout PDF</a>. I give hearty thanks to all the people who have contributed to those projects.</p>
       <p>If you see anything that Tufte CSS could improve, please let us know by <a href="https://github.com/daveliepmann/tufte-css/issues/new">opening an issue on GitHub</a>. Contributions are welcome, too, in the form of pull requests.</p>
+      <p>Finally, a reminder about the goal of this project. The web is not print. Webpages are not books. Therefore, goal of Tufte CSS is not to say "websites should look like this interpretation of Tufte's books" but rather "here are some techniques Tufte developed that we've found useful in print; maybe you can find a way to make them useful on the web". Tufte CSS is merely a sketch of one way to implement this particular set of ideas. It should be a starting point, not a design goal, because any project should present their information as best suits their particular circumstances.</p>
     </section>
 
     <section>
@@ -96,7 +96,7 @@
           </tbody>
         </table>
       </p>
-      <p>Please understand: this is not the One True Table. Such a style does not exist. One must craft each data table with custom care to the narrative one is telling with that specific data. So take this not as "the table style to use", but rather as "a table style to start from". From here, use principles to guide you: avoid chartjunk, optimize the data-ink ratio ("within reason", as Tufte says), and <span class="sidenote-number">"mobilize every graphical element, perhaps several times over, to show the data."</span><span class="sidenote">Page 139, The Visual Display of Quantitative Information, Edward Tufte 2001.</span>
+      <p>Please understand: this is not the One True Table. Such a style does not exist. One must craft each data table with custom care to the narrative one is telling with that specific data. So take this not as "the table style to use", but rather as "a table style to start from". From here, use principles to guide you: avoid chartjunk, optimize the data-ink ratio ("within reason", as Tufte says), and <span class="sidenote-number">"mobilize every graphical element, perhaps several times over, to show the data."</span><span class="sidenote">Page 139, The Visual Display of Quantitative Information, Edward Tufte 2001.</span> Know when to reach for more complex data presentation tools, like a custom graphic or a JavaScript charting library.</p>
     </section>
 
     <section>
