--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         </table>
       </p>
       <p>Please understand: this is not the One True Table. Such a style does not exist. One must craft each data table with custom care to the narrative one is telling with that specific data. So take this not as "the table style to use", but rather as "a table style to start from". From here, use principles to guide you: avoid chartjunk, optimize the data-ink ratio ("within reason", as Tufte says), and "mobilize every graphical element, perhaps several times over, to show the data."<span class="sidenote-number"></span><span class="sidenote">Page 139, The Visual Display of Quantitative Information, Edward Tufte 2001.</span> Know when to reach for more complex data presentation tools, like a custom graphic or a JavaScript charting library.</p>
-      <p>A common table style used in academic publications is provided by the <tt>booktabs</tt> class (see Table&nbsp;2 for an example). The table is surrounded by heavy rules on the top and bottom. A lighter-weight rule is used to separate the table head from its body. If you need a column heading to span two or more other column headings, an even lighter-weight rule may be used. Vertical rules are unnecessary. Additionally, the spacing around the rules has been increased to avoid a cramped appearance.</p>
+      <p>For instance, academic publications written in <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> often rely on the <span class="code">booktabs</span> package to produce clean, clear tables. Similar results can be achieved in Tufte CSS with the <span class="code">booktabs</span> class, as demonstrated in Table 2:</p>
       <p>
-        <span class="marginnote">Table 2: An example table demonstrating the <tt>booktabs</tt> class.</span>
+        <span class="marginnote">Table 2: An example of a <span class="code">booktabs</span>-styled table.</span>
         <table class="booktabs">
           <thead>
             <tr><th colspan="2" class="cmid">Items</th><th class="nocmid"></th></tr>
@@ -114,6 +114,7 @@
           </tbody>
         </table>
       </p>
+      <p>Notice how this table is centered, compact, and surrounded by heavy rules on the top and bottom. A lighter-weight rule is used to separate the table head from its body. If you need a column heading to span two or more other column headings, an even lighter-weight rule may be used. Vertical rules are unnecessary. Additionally, the spacing around the rules has been increased to avoid a cramped appearance.</p>
     </section>
 
     <section>
