toggle margin content at next line break - working

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         </table>
       </p>
       <p>Please understand: this is not the One True Table. Such a style does not exist. One must craft each data table with custom care to the narrative one is telling with that specific data. So take this not as "the table style to use", but rather as "a table style to start from". From here, use principles to guide you: avoid chartjunk, optimize the data-ink ratio ("within reason", as Tufte says), and "mobilize every graphical element, perhaps several times over, to show the data."
-          <label for="8" class="margin-toggle sidenote-number"/>
+          <label for="8" class="margin-toggle sidenote-number"></label>
           <input type="checkbox" id="8" class="margin-toggle"/>
           <span class="sidenote">
               Page 139, The Visual Display of Quantitative Information, Edward Tufte 2001.
