--- a/index.html
+++ b/index.html
@@ -65,20 +65,37 @@
     
     <section>
       <h2>Sidenotes</h2>
-      <p>One of the most distinctive features of Tufte's style is his extensive use of sidenotes.<label for="4" class="margin-toggle sidenote-number"></label><input type="checkbox" id="4" class="margin-toggle"/><span class="sidenote">This is a sidenote.</span> Perhaps you have noticed their use in this document already. You are very astute.</p>
-      <p>On sufficiently large viewports, Tufte CSS uses the margin for sidenotes, margin notes, and small figures. Sidenotes consist of 1) a superscript reference number that goes inline with the text, and 2) a sidenote containing content that repeats the superscripted number to reinforce its connection to the text. To add the former, just put <span class="code">&lt;span class="sidenote-number"&gt;&lt;/span&gt;</span> where you want the reference to go. Immediately after that goes the <span class="code">span</span> with class <span class="code">sidenote</span>, inserted directly into the middle of the <span class="code">p</span> tag containing the referent text. This will give the sidenote the correct height.</p>
-      <p>If you don't want footnote-style numberings on your sidenotes, what you want is a margin note.
+      <p>One of the most distinctive features of Tufte's style is his extensive use of sidenotes.<label for="4" class="margin-toggle sidenote-number"></label><input type="checkbox" id="4" class="margin-toggle"/><span class="sidenote">This is a sidenote.</span> Perhaps you have noticed their use in this document already. You are very astute. On sufficiently large viewports, Tufte CSS uses the margin for sidenotes, margin notes, and small figures. On smaller viewports, these margin elements are hidden until the user clicks to toggle its viewability.</p>
+      <p>Sidenotes consist of two elements: a superscript reference number that goes inline with the text, and a sidenote with content. To add the former, just put a label and dummy checkbox into the text where you want the reference to go, like so:</p>
+      <p>
+        <pre class="code">
+&lt;label for="1" class="margin-toggle sidenote-number"&gt;&lt;/label&gt;
+&lt;input type="checkbox" id="1" class="margin-toggle"/&gt;</pre>
+      </p>
+      <p>Unfortunately, you must manage your own reference numbers, replacing the "1" in the <span class="code">for</span> and the <span class="code">id</span> attribute values with the appropriate number.</p>
+      <p>Immediately adjacent to that sidenote reference in the main text goes the <span class="code">span</span> with class <span class="code">sidenote</span>, containing the sidenote text itself. This tag is also inserted directly in the middle of the body text, but is either pushed into the margin or hidden by default. Make sure to give your sidenotes the correct height by keeping the sidenote-number label close to the sidenote itself.</p>
+      <p>If you want a sidenote without footnote-style numberings, what you want is a margin note.
         <label for="101" class="margin-toggle">&#8853;</label>
         <input type="checkbox" id="101" class="margin-toggle"/>
         <span class="marginnote">
           This is a margin note. Notice there isn't a number preceding the note.
-        </span> They are almost identical to sidenotes but are kept semantically distinct because they operate differently on small screens. Figures in the margin are created as margin notes, as demonstrated in the next section.</p>
+        </span> On large screens, a margin note is identical to a sidenote that omits the reference number. This lessens the distracting effect taking away from the flow of the main text, but can increase the cognitive load of matching a margin note to its referent text. On small screens, a margin note is like a sidenote except its viewability toggle is a symbol, for instance &#8853;, rather than a reference number.</p>
+      <p>Margin notes are created just like sidenotes, but with the <span class="code">marginnote</span> class for the content and the <span class="code">margin-toggle</span> class for the label and dummy checkbox. For instance, here is the code for the margin note used in the previous paragraph:</p>
+      <p>
+        <pre class="code">
+&lt;label for="101" class="margin-toggle"&gt;&amp;#8853;&lt;/label&gt;
+&lt;input type="checkbox" id="101" class="margin-toggle"/&gt;
+&lt;span class="marginnote"&gt;
+  This is a margin note. Notice there isn't a number preceding the note.
+&lt;/span&gt;</pre>
+      </p>
+      <p>Figures in the margin are created as margin notes, as demonstrated in the next section.</p>
     </section>
 
     <section>
       <h2>Figures</h2>
       <p>Tufte emphasizes tight integration of graphics with text. Data, graphs, and figures are kept with the text that discusses them. In print, this means they are not relegated to a separate page. On the web, that means readability of graphics and their accompanying text without extra clicks, tab-switching, or scrolling.</p>
-      <p>Images and graphics play an integral role in Tufte’s work<label for="102" class="margin-toggle">&#8853;</label><input type="checkbox" id="102" class="margin-toggle"/><span class="marginnote"><img src="figure1.png"/>Figure 1: Sepal length vs. petal length, colored by species</span>. To place figures in the margin, just wrap an image (or whatever) in a margin note inside a <span class="code">p</span> tag, as seen in Figure 1 to the right of this paragraph.</p>      
+      <p><input type="checkbox" id="103" class="margin-toggle"/><span class="marginnote"><img src="figure1.png"/>Figure 1: Sepal length vs. petal length, colored by species</span> Images and graphics play an integral role in Tufte's work. <label for="103" class="margin-toggle">&#8853;</label>To place figures in the margin, just wrap an image (or whatever) in a margin note inside a <span class="code">p</span> tag, as seen in Figure 1 to the right of this paragraph.</p>
       <p>If you need a full-width figure, give it the <span class="code">fullwidth</span> class. Make sure that's inside an <span class="code">article</span>, and it will take up (almost) the full width of the screen. Don't wrap the figure in a paragraph tag. To give it a caption, use a <span class="code">figcaption</span> tag inside the <span class="code">figure</span> tag. This approach is demonstrated in Figure 2, which I suppose plots the data in the following code:</p>
       <p class="code">qplot(wt, mpg, data = mtcars, colour = factor(cyl))</p>
       <figure class="fullwidth">
