--- a/index.html
+++ b/index.html
@@ -184,9 +184,11 @@
 
     <section>
       <h2>Other Tools</h2>
-      <p>Tufte CSS attempts only to cover some basic “Tuftean” ideas, providing one possible set of defaults, using cascading stylesheets. Therefore many of the more interesting techniques he points to are far outside the scope of this project. Graphing data, interactive data visualizations, and non-traditional text formats are fantastic tools that aren’t covered by Tufte CSS. Here is a short and incomplete overview of tools that can help accomplish a few Tufte-specific techniques.</p>
+      <p>Tufte CSS attempts only to cover some basic “Tuftean” ideas, providing one possible set of defaults, using cascading stylesheets. Therefore many of the more interesting techniques he points to are far outside the scope of this project. Graphing data, interactive data visualizations, and non-traditional text formats are fantastic tools that aren’t covered by Tufte CSS. Here is a short and incomplete overview of tools that can help accomplish a few Tufte-like techniques.</p>
       <p>Sparklines are awesome, and can be created in a variety of ways. People are making them with <a href="https://github.com/adactio/Canvas-Sparkline">plain javascript</a>, <a href="http://omnipotent.net/jquery.sparkline/#s-about">jQuery</a>, <a href="http://www.tnoda.com/blog/2013-12-19">d3.js</a>, and <a href="http://www.highcharts.com/demo/sparkline">HighCharts</a>. Evaluate those solutions to see which is most appropriate for your needs.</p>
       <p>If you need to display mathematical symbols and equations, I hear <a href="http://www.mathjax.org/">MathJax</a> is good.</p>
+      <p>Although I don’t follow all of its prescriptions, I like <a href=”http://practicaltypography.com/”>Butterick’s Practical Typography</a> for its thoughts on designing text for the web.</p>
+      <p> Bret Victor’s has published some vintage computer science talks and papers, like <a href=”http://worrydream.com/EnlightenedImaginationForCitizens/”>this one by Alan Kay</a>, that have a Tufte-CSS feel that I quite like.</p>
     </section>
   </article>
 </body>
