Remove "Table 2" reference

--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
           Page 139, <em>The Visual Display of Quantitative Information</em>, Edward Tufte 2001.
         </span> Furthermore, one must know when to reach for more complex data presentation tools, like a custom graphic or a JavaScript charting library.</p>
 
-      <p>As an example of alternative table styles, academic publications written in <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> often rely on the <span class="code">booktabs</span> package to produce clean, clear tables. Similar results can be achieved in Tufte CSS with the <span class="code">booktabs</span> class, as demonstrated in Table 2:</p>
+      <p>As an example of alternative table styles, academic publications written in <span class="latex">L<sup>a</sup>T<sub>e</sub>X</span> often rely on the <span class="code">booktabs</span> package to produce clean, clear tables. Similar results can be achieved in Tufte CSS with the <span class="code">booktabs</span> class, as demonstrated in this table:</p>
       <div class="table-wrapper">
         <span class="table-caption">
-          Table 2: An example of a <span class="code">booktabs</span>-styled table.
+          An example of a <span class="code">booktabs</span>-styled table.
         </span>
         <table class="booktabs">
           <thead>
